Fix gap in favourite modal

--- a/src/components/favourites/Favourites.module.css
+++ b/src/components/favourites/Favourites.module.css
@@ -17,6 +17,7 @@
 
 .favsContainer {
   display: flex;
+  gap: 2rem;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
